--- a/messaging-portlet-api/src/main/resources/META-INF/resources/css/main.css
+++ b/messaging-portlet-api/src/main/resources/META-INF/resources/css/main.css
@@ -194,6 +194,23 @@
     margin-right: 20px !important;
 }
 
+.c777{
+    color: #777 !important;
+}
+.c666{
+    color: #666 !important;
+}
+.c555{
+    color: #555 !important;
+}
+.c444{
+    color: #444 !important;
+}
+.c333{
+    color: #333 !important;
+}
+
+
 .inline-container {
     display: inline !important;
 }
